# University-Dormitory-Restaurant-Management-System-UDRMS

./: CMakeLists.txt  Makefile  README.md  README.txt
include/: Dormitory.h  Menu.h  Restaurant.h  Room.h  Student.h  University.h
src/: Dormitory.cpp  Menu.cpp  Restaurant.cpp  Room.cpp  Student.cpp  University.cpp  main.cpp
ui/: MainWindow.cpp  MainWindow.h  main_gui.cpp
